remove Contended stub